frontend_deployment.yaml
# Updated BJP eMessenger Frontend Deployment YAML

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: bjp-emessenger-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bjp-emessenger-frontend
  template:
    metadata:
      labels:
        name: bjp-emessenger-frontend
        app: bjp-emessenger-frontend
        version: 1.0.0
    spec:
      nodeName: mannit-4gb-nbg1-1
      containers:
      - args:
         - sh
         - -c
         - cd /usr/src/app && npm install && npm start
        image: node:alpine  # Replace with your actual Docker image name
        name: bjp-emessenger-frontend
        ports:
        - containerPort: 3000
          name: bjp-messenger
        resources:
          requests:
            cpu: 300m
            memory: 200Mi
        volumeMounts:
        - mountPath: /usr/src/app
          name: bjp-emessenger-frontend-pv-claim
        workingDir: /usr/src/app
      restartPolicy: Always
      volumes:
      - name: bjp-emessenger-frontend-pv-claim
        persistentVolumeClaim:
          claimName: bjp-emessenger-frontend-pv-claim


---
# Updated BJP eMessenger Frontend Service YAML

apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: bjp-emessenger-frontend
spec:
  type: NodePort
  ports:
  - name: "bjp-messenger"
    port: 3000
    targetPort: 3000
    #nodePort: 32202
  selector:
    app: bjp-emessenger-frontend
